# alrightHttpServerClient

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  raw.txt
cmake/: CxxFlags.cmake  FindMySql.cmake  FindMySqlConn.cmake  FindXi.cmake
include/: alrightClient.h  alrightData.h  alrightHttpConnection.h  alrightHttpRequest.h  alrightHttpResource.h  alrightHttpsRequest.h  alrightServer.h  alrightSystemError.h  app.h  appinfo.h
s/: build.sh  clangTidy.sh  debug.sh  start.sh
src/: app.cpp  client.cpp  main.cpp  server.cpp
tests/: clientTest.cpp
webSrv/: index.html
